IAMEN/XPS-Q8/XPS-Q-Drivers/XPS-Q_Drivers/XPS-Q_DLL_Drivers/XPS_Q8_drivers.bas

Declare Function XYZSplineVerificationResultGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal FileName As String, MinimumPosition As Double, MaximumPosition As Double, MaximumVelocity As Double, MaximumAcceleration As Double) As Long '  XYZ trajectory verification result get
Declare Function XYZSplineExecution Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String, ByVal Velocity As Double, ByVal Acceleration As Double) As Long '  XYZ trajectory execution
Declare Function XYZSplineParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal FileName As String, Velocity As Double, Acceleration As Double, CurrentElementNumber As Long) As Long '  XYZ trajectory get parameters
Declare Function TZPVTVerification Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String) As Long '  TZ PVT trajectory verification
Declare Function TZPVTVerificationResultGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal FileName As String, MinimumPosition As Double, MaximumPosition As Double, MaximumVelocity As Double, MaximumAcceleration As Double) As Long '  TZ PVT trajectory verification result get
Declare Function TZPVTExecution Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String, ByVal ExecutionNumber As Long) As Long '  TZ PVT trajectory execution
Declare Function TZPVTParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal FileName As String, CurrentElementNumber As Long) As Long '  TZ PVT trajectory get parameters
Declare Function TZPVTPulseOutputSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal StartElement As Long, ByVal EndElement As Long, ByVal TimeInterval As Double) As Long '  Configure pulse output on trajectory
Declare Function TZPVTPulseOutputGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, StartElement As Long, EndElement As Long, TimeInterval As Double) As Long '  Get pulse output on trajectory configuration
Declare Function TZPVTLoadToMemory Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryPart As String) As Long '  TZ Load PVT trajectory through function
Declare Function TZPVTResetInMemory Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  TZ PVT trajectory reset in memory
Declare Function TZFocusModeEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Enable the focus mode
Declare Function TZFocusModeDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Disable the focus mode
Declare Function TZTrackingUserMaximumZZZTargetDifferenceGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, UserMaximumZZZTargetDifference As Double) As Long '  Get user maximum ZZZ target difference for tracking control
Declare Function TZTrackingUserMaximumZZZTargetDifferenceSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal UserMaximumZZZTargetDifference As Double) As Long '  Set user maximum ZZZ target difference for tracking control
Declare Function FocusProcessSocketReserve Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Set user maximum ZZZ target difference for tracking control
Declare Function FocusProcessSocketFree Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Set user maximum ZZZ target difference for tracking control
Declare Function PositionerMotorOutputOffsetGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, PrimaryDAC1 As Double, PrimaryDAC2 As Double, SecondaryDAC1 As Double, SecondaryDAC2 As Double) As Long '  Get soft (user defined) motor output DAC offsets
Declare Function PositionerMotorOutputOffsetSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal PrimaryDAC1 As Double, ByVal PrimaryDAC2 As Double, ByVal SecondaryDAC1 As Double, ByVal SecondaryDAC2 As Double) As Long '  Set soft (user defined) motor output DAC offsets
Declare Function SingleAxisThetaPositionRawGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, RawEncoderPosition1 As Double, RawEncoderPosition2 As Double, RawEncoderPosition3 As Double) As Long '  Get raw encoder positions for single axis theta encoder
Declare Function EEPROMCIESet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal CardNumber As Long, ByVal ReferenceString As String) As Long '  Get raw encoder positions for single axis theta encoder
Declare Function EEPROMDACOffsetCIESet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PlugNumber As Long, ByVal DAC1Offset As Double, ByVal DAC2Offset As Double) As Long '  Get raw encoder positions for single axis theta encoder
Declare Function EEPROMDriverSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PlugNumber As Long, ByVal ReferenceString As String) As Long '  Get raw encoder positions for single axis theta encoder
Declare Function EEPROMINTSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal CardNumber As Long, ByVal ReferenceString As String) As Long '  Get raw encoder positions for single axis theta encoder
Declare Function CPUCoreAndBoardSupplyVoltagesGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, VoltageCPUCore As Double, SupplyVoltage1P5V As Double, SupplyVoltage3P3V As Double, SupplyVoltage5V As Double, SupplyVoltage12V As Double, SupplyVoltageM12V As Double, SupplyVoltageM5V As Double, SupplyVoltage5VSB As Double) As Long '  Get raw encoder positions for single axis theta encoder
Declare Function CPUTemperatureAndFanSpeedGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, CPUTemperature As Double, CPUFanSpeed As Double) As Long '  Get raw encoder positions for single axis theta encoder
Declare Function ActionListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ActionList As String) As Long '  Action list
Declare Function ActionExtendedListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ActionList As String) As Long '  Action extended list
Declare Function APIExtendedListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Method As String) As Long '  API method list
Declare Function APIListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal Method As String) As Long '  API method list without extended API
Declare Function ControllerStatusListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ControllerStatusList As String) As Long '  Controller status list
Declare Function ErrorListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ErrorsList As String) As Long '  Error list
Declare Function EventListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal EventList As String) As Long '  General event list
Declare Function GatheringListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Long '  Gathering type list
Declare Function GatheringExtendedListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Long '  Gathering type extended list
Declare Function GatheringExternalListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Long '  External Gathering type list
Declare Function GroupStatusListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupStatusList As String) As Long '  Group status list
Declare Function HardwareInternalListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal InternalHardwareList As String) As Long '  Internal hardware list
Declare Function HardwareDriverAndStageGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PlugNumber As Long, ByVal DriverName As String, ByVal StageName As String) As Long '  Smart hardware
Declare Function ObjectsListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ObjectsList As String) As Long '  Group name and positioner name
Declare Function PositionerErrorListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerErrorList As String) As Long '  Positioner error list
Declare Function PositionerHardwareStatusListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerHardwareStatusList As String) As Long '  Positioner hardware status list
Declare Function PositionerDriverStatusListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerDriverStatusList As String) As Long '  Positioner driver status list
Declare Function ReferencingActionListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Long '  Get referencing action list
Declare Function ReferencingSensorListGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Long '  Get referencing sensor list
Declare Function GatheringUserDatasGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, UserData1 As Double, UserData2 As Double, UserData3 As Double, UserData4 As Double, UserData5 As Double, UserData6 As Double, UserData7 As Double, UserData8 As Double) As Long '  Return UserDatas values
Declare Function ControllerMotionKernelPeriodMinMaxGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, MinimumCorrectorPeriod As Double, MaximumCorrectorPeriod As Double, MinimumProfilerPeriod As Double, MaximumProfilerPeriod As Double, MinimumServitudesPeriod As Double, MaximumServitudesPeriod As Double) As Long '  Get controller motion kernel min/max periods
Declare Function ControllerMotionKernelPeriodMinMaxReset Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Reset controller motion kernel min/max periods
Declare Function SocketsStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal SocketsStatus As String) As Long '  Get sockets current status
Declare Function TestTCP Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal InputString As String, ByVal ReturnString As String) As Long '  Test TCP/IP transfert
Declare Function OptionalModuleExecute Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ModuleFileName As String) As Long '  Execute an optional module
Declare Function OptionalModuleKill Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TaskName As String) As Long '  Kill an optional module
